
[package]
name = "rust_rados"
version = "0.0.1"
authors = [ "Chris Holcombe<xfactor973@gmail.com>" ]

[dependencies.libc]
version = "*"

# The development profile, used for `cargo build`
[profile.dev]
opt-level = 0  # Controls the --opt-level the compiler builds with
debug = true   # Controls whether the compiler passes -g or `--cfg ndebug`
rpath = false  # Controls whether the compiler passes `-C rpath`
lto = false    # Controls `-C lto` for binaries and staticlibs
debug-assertions = true  # Controls whether debug assertions are enabled

[dependencies.rustc-serialize]
version = "*"

[[bin]]
name = "rust_rados"
